<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.sportsmanPage.LoginSportsman"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500"
            android:fontFamily="@font/righteous"
            android:gravity="center_horizontal"
            android:text="@string/labelLoginSportsman"
            android:textColor="#E9FDF9"
            android:textSize="45dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/yellowtext"
            android:fontFamily="@font/righteous"
            android:gravity="center_horizontal"
            android:text="@string/SportsmanSignIn"
            android:textColor="#E9FDF9"
            android:textSize="30dp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNameSportsman"
            android:layout_width="384dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/righteous"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:fontFamily="@font/righteous"
                android:hint="@string/sportsman_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/textInputSurnameSportsman"
            app:errorEnabled="true"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="392dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/righteous"
                android:hint="@string/sportsman_surname"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/selecteddATE"
            android:layout_width="215dp"
            android:layout_height="25dp"
            android:text="@string/select_date"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/buttonSelectedDate"
            android:layout_width="215dp"
            android:layout_height="40dp"
            android:onClick="selectDateSport"
            android:text="@string/select"/>
        <TextView
            android:id="@+id/selectedDateSportsman"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Spinner
            android:id="@+id/spinner_sample"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/selectASectionText"
            android:text="Select a section: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_section"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/username"
            app:errorEnabled="true"

            android:layout_height="65dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:fontFamily="@font/righteous"
                android:hint="@string/username"
                android:layout_marginTop="10dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/emailSportsman"
            android:fontFamily="@font/righteous"
            app:errorEnabled="true"
            android:layout_height="65dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/righteous"
                android:layout_marginTop="10dp"
                android:hint="@string/sportsman_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPasswordSportsman"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:fontFamily="@font/righteous"
                android:hint="@string/sportsman_pas"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginSignUpButtonPas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500"
            android:fontFamily="@font/righteous"
            android:text="@string/sportsman_signup"
            android:textColor="#E9FDF9"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginSport"
            android:text="@string/tap_to_login"
            android:layout_marginTop="16dp"
            android:textSize="20dp"
            android:onClick="goToLogin"
            android:textColor="@color/purple_500"
            android:fontFamily="@font/righteous"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/TapToOpenDoctor"
            android:text="@string/are_you_doctor"
            android:layout_marginTop="16dp"
            android:textSize="20dp"
            android:onClick="goToDoctorReg"
            android:textColor="@color/purple_500"
            android:fontFamily="@font/righteous"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
</ScrollView>
